apps/web/itff/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itff
  namespace: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: itff
  template:
    metadata:
      labels:
        app: itff

    spec:
      containers:
      - name: itff
        image: replaced-by-kustomize
        securityContext:
          runAsNonRoot: true
          runAsUser: 1001
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "4000m"
        ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-login-secret
