apps/web/itff/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itff
spec:
  selector:
    app: itff
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
